--- a/DA_project_new.ipynb
+++ b/DA_project_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
    "source": [
     "https://www.kaggle.com/harlfoxem/housesalesprediction\n",
     "\n",
-    "**Данные являются официальной статистикой продаж домов в США в округе Кинг, который включает в себя Сиэтл. Сам датасет содержит информацию по 21613 сделкам за 2014 - 2015 года.**"
+    "**Данные являются официальной статистикой продаж домов в США в округе Кинг, который включает в себя Сиэтл. Сам датасет содержит информацию по 21613 сделкам за 2014 - 2015 годы.**"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Цель проекта - исследование особенностей рынка жилья США на примере данных из округа Кинг. Помимо этого будут проверены статистические гипотезы и сделано предсказание временного ряда продаж.**"
+    "**Цель проекта - исследование рынка жилья США на примере данных из округа Кинг. Помимо этого будут проверены статистические гипотезы и сделано предсказание временного ряда продаж.**"
    ]
   },
   {
@@ -355,14 +355,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что \"нанов\" нет, это хорошо**\n",
+    "**Видим, что \"нанов\" нет, это хорошо.**\n",
     "\n",
-    "**Выбросим столбцы \"id\" и \"zipcode\", \"lat\", \"long\", они точно не пригодятся**"
+    "**Выбросим столбцы \"id\" и \"zipcode\", \"lat\", \"long\", они точно не пригодятся.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Посмотрим на гистограмму количества купленных домов по месяцам**"
+    "**Посмотрим на гистограмму количества купленных домов по месяцам за период сбора статистики.**"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим много продаж в мае, это кажется странным. Посмотрим на данные внимательнее**"
+    "**Видим много продаж в мае, исследуем этот факт более пристальным образом.**"
    ]
   },
   {
@@ -490,12 +490,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что в мае у нас накладываются данные за два года, это мы и увидели на гистограмме. Тогда для удобства работы с данными будем ориентироваться не на даты, а на количество дней/недель, прошедших с начала сбора статистики.**"
+    "**Оказывается, в мае накладываются данные за два года, это мы и увидели на гистограмме. Тогда для удобства работы с данными будем ориентироваться не на даты, а на количество дней/недель, прошедших с начала сбора статистики.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Появились отрицательные значения, разберемся, с чем это связано**"
+    "**Появились отрицательные значения, разберемся, с чем это связано.**"
    ]
   },
   {
@@ -555,12 +555,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Оказывается, что -17 получилось для данных за неделю, которая началась в 2014, а закончилась в 2015. Исправим это, присвоим корректное значение, то есть первой недели 2015**"
+    "**Оказывается, что -17 получилось для данных за неделю, которая началась в 2014г., а закончилась в 2015г. Исправим это, присвоив корректное значение, то есть первой недели 2015г.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Также видим, что в первый и последний месяцы данных статистика собрана за все дни, а не до середины, как могло бы случиться, это хорошо.**"
+    "**Также видно, что в первый и последний месяцы данных статистика собрана за все дни, а не до середины, как могло бы случиться, это хорошо.**"
    ]
   },
   {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что суммарная стоимость проданных домов имеет малую амплитуду колебаний, однако есть недели, очевидно, выбивающиеся из общей картины. Например 20 и 24. Сравним статистику в эти недели с 30, когда аномалий не наблюдалось.**"
+    "**Видно, что суммарная стоимость проданных домов имеет малую амплитуду колебаний, однако, есть недели, выбивающиеся из общей картины. Например, 20-я и 24-я. Сравним статистику за эти недели с 30-й, когда аномалий не наблюдалось.**"
    ]
   },
   {
@@ -744,7 +744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что средняя цена проданных домов не превосходит 30 неделю, а количество наоборот в 2 раза больше. Отсюда заключаем, что резкие скачки на графике связаны не с продажей очень дорогих объектов, а именно с особенностями рынка и большим спросом.**"
+    "**Видно, что средняя цена проданных домов не превосходит 30-ю неделю, а количество, наоборот - в 2 раза больше. Отсюда заключаем, что резкие скачки на графике связаны не с продажей очень дорогих объектов, а именно с особенностями рынка и большим спросом.**"
    ]
   },
   {
@@ -828,14 +828,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Также можем заметить что в 0 и 54, 55, 56 недели домов было продано крайне мало, это соответствует маю в 2014 и 2015 годах. На первый взгляд может показаться, что просто не хватает данных, но мы проверили, что сделки в те месяцы были практически во все дни. Но и сделать вывод о такой особенности поведения рынка в этот месяц года не можем, так как нет полных данных за несколько лет. Просто отметим этот странный факт малого количества сделок в мае**"
+    "**Также можем заметить что в 0-ю и 54-ю, 55-ю, 56-ю недели домов было продано крайне мало, это соответствует маю в 2014г. и 2015г. годах. На первый взгляд может показаться, что просто не хватает данных, но мы проверили ранее, что сделки в те месяцы были практически во все дни. Но и сделать вывод о такой особенности поведения рынка в этот месяц года не можем, так как нет полных данных за несколько лет. Просто отметим этот факт малого количества сделок в мае.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Далее рассмотрим гистограмму проданных домов в зависимости от года их постройки. Часть домов первой половины 20-го века были снесены, таким образом, мы не получим информации об абсолютном значении построенных домов, к примеру в 1930-е, тем не менее корректно будет сравнивать соседние несколько лет из первой половины прошлого столетия, что даст нам возможность проследить динамику объемов строительства.**"
+    "**Далее рассмотрим гистограмму проданных домов в зависимости от года их постройки. Часть домов первой половины 20-го века были снесены, таким образом, мы не получим информации об абсолютном значении количества построенных домов, к примеру в 1930-е, тем не менее корректно будет сравнивать соседние несколько лет из первой половины прошлого столетия, что даст возможность проследить динамику объемов строительства.**"
    ]
   },
   {
@@ -868,14 +868,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Известный факт, что при неблагоприятной экономической обстановке в стране девелоперские компании страдают очень сильно. Это прослеживается на графике. 1930-е года - Великая депрессия в США. Резкие падения с 1955 по 1975 могут быть связаны с экономическими последствиями продолжавшейся войны во Вьетнаме. Но не будем забывать про кризис, начавшийся в 1973 году, который был вызван действиями членов ОПЕК. Начало 2000-х - это кризис \"доткомов\", а также теракт 11 сентября, имевший также большие экономические последствия. Далее мы видим последствия кризиса 2007 года, в котором жилищный сектор пострадал очень сильно не только из-за падения доходов населения, безработицы, но и ранее бесконтрольно выдававшихся ипотечных кредитов, оказавшихся впоследствии невозвращенными. Остальные резкие скачки, вероятно, также имеют обоснование с точки зрения экономических событий в стране, но \"копать\"  в поисках причин придется чуть глубже, например отслеживать субсидии государства девелоперам и прочие тонкости.**"
+    "**Известный факт, что при неблагоприятной экономической обстановке в стране девелоперские компании страдают очень сильно. Это прослеживается на графике. 1930-е года - Великая депрессия в США. Резкие падения с 1955 по 1975 годы могут быть связаны с экономическими последствиями продолжавшейся войны во Вьетнаме. Но не будем забывать про кризис, начавшийся в 1973 году, который был вызван действиями членов ОПЕК. Начало 2000-х - это кризис \"доткомов\", а также теракт 11 сентября, имевший также большие экономические последствия. Далее мы видим последствия кризиса 2007 года, в котором жилищный сектор пострадал очень сильно не только из-за падения доходов населения, безработицы, но и ранее бесконтрольно выдававшихся ипотечных кредитов, оказавшихся впоследствии невозвращенными. Остальные резкие скачки, вероятно, также имеют обоснование с точки зрения экономических событий в стране, но искать причины придется несколько глубже, например, отслеживать субсидии государства девелоперам и прочие тонкости.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Теперь взглянем на хитмап корреляций между столбцами**"
+    "**Теперь взглянем на хитмап корреляций между столбцами.**"
    ]
   },
   {
@@ -915,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что цена довольно сильно коррелирует с оценкой дома, а также с различными площадями, в том числе с площадью ванной комнаты.**"
+    "**Видно, что цена довольно сильно коррелирует с оценкой дома, а также с различными площадями, в том числе с площадью ванной комнаты.**"
    ]
   },
   {
@@ -1236,7 +1236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Левое значение - дата одного из локальных минимумов, второе - дата глобального спада"
+    "Левое значение - дата одного из локальных минимумов, второе - дата глобального спада."
    ]
   },
   {
@@ -1263,7 +1263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим совершенно четкую недельную сезонность. Причем минимумы соответствуют выходным, что обосновывается нерабочими днями в организациях, обеспечивающих юридическое сопровождение сделок, а также в банках. После этого резкое увеличение продаж в начале недели и спад к концу. Можно предположить, что показы домов риэлторами производятся в основном в выходные, когда свободны клиенты и собственники жилья, но невозможно заключить сделки. Затем, с началом рабочей недели, люди, определившись с покупками, торопятся их осуществлять. Об этом свидетельствует резкий рост количества сделок после локальных минимумов(выходных) на самом верхнем графике, представленном без изменений, затем идет падение, но уже менее стремительное, чем был рост, т.к. основная масса людей, кто определились с покупкой в выходные, уже сделали их, но не все.**\n",
+    "**Видим совершенно четкую недельную сезонность. Причем минимумы соответствуют выходным, что обосновывается нерабочими днями в организациях, обеспечивающих нотариальное и юридическое сопровождение сделок, а также в банках. После этого резкое увеличение продаж в начале недели и спад к концу. Можно предположить, что показы домов риэлторами производятся в основном в выходные, когда свободны клиенты и собственники жилья, но невозможно заключить сделки. Затем, с началом рабочей недели, люди, определившись с покупками, торопятся их осуществлять. Об этом свидетельствует резкий рост количества сделок после локальных минимумов(выходных) на самом верхнем графике, представленном без изменений, затем идет падение, но уже менее стремительное, чем был рост, т.к. основная масса людей, кто определились с покупкой в выходные, уже сделали их, но не все.**\n",
     "\n",
     "**Также очевиден глобальный спад в период новогодних праздников и начала года в целом. Люди отдыхают, рынок практически не работает, что логично.**"
    ]
@@ -1272,7 +1272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Далее посмотрим как влияет факт расположения дома на берегу и вид из окна на его цену**"
+    "**Далее посмотрим, как влияет факт расположения дома на берегу и вид из окна на его цену.**"
    ]
   },
   {
@@ -1390,7 +1390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Изобразим завимость цены от числа спален и ванных комнат, хотя дробные значения количества ванных меня смущают, однако площадью эта величина являться просто не может**"
+    "**Изобразим завимость цены от числа спален и ванных комнат. Целые значения количества ванных комнат соответствуют объединенным душевой и туалету, а дробные - когда в комнате расположено что-то одно.**"
    ]
   },
   {
@@ -1456,7 +1456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Таким образом, цена от количества ванных комнат имеет степенную зависимость, а от количества спален - линейную, что достаточно необычно и неожиданно.**"
+    "**Таким образом, цена от количества ванных комнат имеет степенную зависимость, а от количества спален - линейную, что достаточно необычно.**"
    ]
   },
   {
@@ -1470,7 +1470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Предсказывать будем суммарную стоимость проданных домов за некоторый промежуток времени в дневном масштабе. Но сначала сделаем еще один датафрейм и поместим туда данные после подсчета денег за каждый день в функции.**"
+    "**Предсказывать будем суммарную стоимость проданных домов за некоторый промежуток времени в дневном масштабе. Но сначала сделаем еще один датафрейм и поместим туда данные после подсчета в функции денег за каждый день.**"
    ]
   },
   {
@@ -1565,7 +1565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Видим, что получилось довольно неплохо.**"
+    "**По пографку видно, что предсказанная зависимость практически совпадает с фактическими данными за этот период.**"
    ]
   },
   {
@@ -1613,7 +1613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Проверим что средние жилые площади у домов, построенных до и после 1975 года равны"
+    "# Проверим, равны ли средние жилые площади у домов, построенных до и после 1975 года"
    ]
   },
   {
@@ -1707,7 +1707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Похоже на нормальное, но проверим это с помощью Q-Q plot**"
+    "**Похоже на нормальное, но проверим это с помощью Q-Q plot.**"
    ]
   },
   {
@@ -1743,18 +1743,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Мы видим что эти распределения можно приближенно считать нормальными, хотя на концах отклонения возникают в обоих случаях.**"
+    "**Видно, что эти распределения можно приближенно считать нормальными, хотя на концах отклонения возникают в обоих случаях.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Проверим при помощи т-критерия для независимых выборок равенство средних значений логарифмов площади, но из равенств/отличий логарифмов будет следовать то же самое и для самих средних площадей**\n",
+    "**Проверим при помощи т-критерия для независимых выборок равенство средних значений логарифмов площади, но из равенств/отличий логарифмов будет следовать то же самое и для самих средних площадей.**\n",
     "\n",
-    "Гипотеза Н0 - средние равны\n",
+    "Гипотеза Н0 - средние равны.\n",
     "\n",
-    "Гипотеза Н1 - не равны"
+    "Гипотеза Н1 - не равны."
    ]
   },
   {
@@ -1783,7 +1783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Мы видим что средняя площадь все же разная**"
+    "**Нулевая гипотеза статистически незначима, соотетственно, жилые площади отличаются.**"
    ]
   },
   {
@@ -1791,6 +1791,13 @@
    "metadata": {},
    "source": [
     "# Вторая гипотеза. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Дома, построенные в 1900-м году дороже новых, построенных в 2015-м. Проверим эту гипотезу при помощи критерия Манна-Уитни."
    ]
   },
   {
@@ -1837,13 +1844,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**При помощи критерия Манна-Уитни проверим, правда ли, что дома, построенные в 1900-м году дороже новых, построенных в год сбора статистики, то есть в 2015**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Н0 - в 2015 дешевле\n",
     "\n",
     "Н1 - в 2015 дороже"
@@ -1873,7 +1873,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Гипотеза не подтвердилась, новые дома оказались дороже.**"
+    "**Нулевая гипотеза оказалась статистически незначимой, новые дома дороже.**"
    ]
   },
   {
@@ -1887,11 +1887,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1) Обнаружены степенные и линейные зависимости цены от признаков, что дает представление об особенностях ценообразования жилья как вторичного, так и нового.**\n",
+    "**1) Обнаружены степенные и линейные зависимости цены от признаков, что дает представление об особенностях ценообразования жилья.**\n",
     "\n",
     "**2) Подтверждено утверждение о зависимости рынка жилья от экономической ситуации в стране.**\n",
     "\n",
-    "**3) Исследовано поведение временного ряда продаж домов, выдвинуты предположения, объясняющие особенности рынка, в частности сезонность и глобальный спад в начале года, а также сделано предсказание этого временного ряда.**"
+    "**3) Исследовано поведение временного ряда продаж домов, выдвинуты предположения, объясняющие особенности рынка, в частности сезонность и глобальный спад в начале года. Также сделано предсказание этого временного ряда.**\n",
+    "\n",
+    "**4) Были опровергнуты две гипотезы: 1) Средние жилые площади у домов, построенных до и после 1975г. равны. Несостоятельность этой гипотезы говорит о том, что люди после 1975г. способны купить более дорогое жилье. Уровень жизни и доходы росли быстрее скорректированной на инфляцию стоимости жилья. Также на результат оказала влияние растущая доступность кредитов в стране. Государство придерживается политики дешевых денег, снижая ключевую ставку до минимальных значений, что в купе со средней годовой инфляцией около 2% дает людям возможность жить в более просторных домах. 2) Дома, построенные в 1900-м году дороже новостроек. Несостоятельность этой гипотезы говорит нам факт, не требующий объяснения. Старые дома, построенные в исторических кварталах, стоят дешевле современных и высокотехнологичных, построенных в более новых и удобных по расположению районах городов.**\n",
+    "        "
    ]
   }
  ],
